Renamed script.js to the proper name specified in the lab

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <p>Press F12 to open your console.</p>
         </div>
         <script
-            src="script.js">
+            src="app.js">
         </script>
     </body>
 </html>
