Now storing questions and answers in their own separate arrays with matching indices.

--- a/index.html
+++ b/index.html
@@ -13,52 +13,52 @@
         </div>
         <div id="question-grid">
             <div class="question-row">
-                <span class="1 question-block category" id="0">0</span>
-                <span class="2 question-block category" id="0">0</span>
-                <span class="3 question-block category" id="0">0</span>
-                <span class="4 question-block category" id="0">0</span>
-                <span class="5 question-block category" id="0">0</span>
-                <span class="6 question-block category" id="0">0</span>
+                <span class="1 question-block category"></span>
+                <span class="2 question-block category"></span>
+                <span class="3 question-block category"></span>
+                <span class="4 question-block category"></span>
+                <span class="5 question-block category"></span>
+                <span class="6 question-block category"></span>
             </div>
             <div class="question-row">
-                <span class="1 question-block" id="1">1</span>
-                <span class="2 question-block" id="1">1</span>
-                <span class="3 question-block" id="1">1</span>
-                <span class="4 question-block" id="1">1</span>
-                <span class="5 question-block" id="1">1</span>
-                <span class="6 question-block" id="1">1</span>
+                <span class="1 question-block hidden"></span>
+                <span class="2 question-block hidden"></span>
+                <span class="3 question-block hidden"></span>
+                <span class="4 question-block hidden"></span>
+                <span class="5 question-block hidden"></span>
+                <span class="6 question-block hidden"></span>
             </div>
             <div class="question-row">
-                <span class="1 question-block" id="2">2</span>
-                <span class="2 question-block" id="2">2</span>
-                <span class="3 question-block" id="2">2</span>
-                <span class="4 question-block" id="2">2</span>
-                <span class="5 question-block" id="2">2</span>
-                <span class="6 question-block" id="2">2</span>
+                <span class="1 question-block hidden"></span>
+                <span class="2 question-block hidden"></span>
+                <span class="3 question-block hidden"></span>
+                <span class="4 question-block hidden"></span>
+                <span class="5 question-block hidden"></span>
+                <span class="6 question-block hidden"></span>
             </div>
             <div class="question-row">
-                <span class="1 question-block" id="3">3</span>
-                <span class="2 question-block" id="3">3</span>
-                <span class="3 question-block" id="3">3</span>
-                <span class="4 question-block" id="3">3</span>
-                <span class="5 question-block" id="3">3</span>
-                <span class="6 question-block" id="3">3</span>
+                <span class="1 question-block hidden"></span>
+                <span class="2 question-block hidden"></span>
+                <span class="3 question-block hidden"></span>
+                <span class="4 question-block hidden"></span>
+                <span class="5 question-block hidden"></span>
+                <span class="6 question-block hidden"></span>
             </div>
             <div class="question-row">
-                <span class="1 question-block" id="4">4</span>
-                <span class="2 question-block" id="4">4</span>
-                <span class="3 question-block" id="4">4</span>
-                <span class="4 question-block" id="4">4</span>
-                <span class="5 question-block" id="4">4</span>
-                <span class="6 question-block" id="4">4</span>
+                <span class="1 question-block hidden"></span>
+                <span class="2 question-block hidden"></span>
+                <span class="3 question-block hidden"></span>
+                <span class="4 question-block hidden"></span>
+                <span class="5 question-block hidden"></span>
+                <span class="6 question-block hidden"></span>
             </div>
             <div class="question-row">
-                <span class="1 question-block" id="5">5</span>
-                <span class="2 question-block" id="5">5</span>
-                <span class="3 question-block" id="5">5</span>
-                <span class="4 question-block" id="5">5</span>
-                <span class="5 question-block" id="5">5</span>
-                <span class="6 question-block" id="5">5</span>
+                <span class="1 question-block hidden"></span>
+                <span class="2 question-block hidden"></span>
+                <span class="3 question-block hidden"></span>
+                <span class="4 question-block hidden"></span>
+                <span class="5 question-block hidden"></span>
+                <span class="6 question-block hidden"></span>
             </div>
         </div>
         <div id="user-input">
