Clicking on a question will make it pop out on a modal

--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
             <h3>Score:</h3>
             <p id="score"></p>
         </div>
+        <div id="modal">
+            <span id="close-modal">&times;</span>
+            <div id="modal-content">
+                <p id="modal-question">This is a test</p>
+            </div>
+        </div>
         <script
             src="app.js">
         </script>
