Code can now check if answer is correct and update score accordingly.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Pass 2</title>
+        <title>Pass 3</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body id="container">
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div id="user-input">
-            <form id="answer-form">
+            <form id="answer-form" autocomplete="off">
                 <label for="answer" id="answer-label">ANSWER: </label>
                 <input type="text" id="answer" name="answer">
                 <input type="submit" id="answer-submit" value="&rarr;">
@@ -73,7 +73,7 @@
             <p id="score"></p>
         </div>
         <div id="modal">
-            <span id="close-modal">&times;</span>
+            <!-- <span id="close-modal">&times;</span> -->
             <div id="modal-content">
                 <p id="modal-question">This is a test</p>
             </div>
